# scp087b_redux

./: Cargo.toml  README.md
art/: map.blend  map.blend1  map0.blend  map0.blend1  map1.blend  map1.blend1  map2.blend  map2.blend1  map3.blend  map3.blend1  map4.blend  map4.blend1  map5.blend  map5.blend1  map6.blend  map6.blend1  map7.blend  map7.blend1
assets/map/: map.glb  map0.glb  map1.glb  map2.glb  map3.glb  map4.glb  map5.glb  map6.glb  mental.gltf
assets/map/rooms/: map.gltf  map0.gltf  map1.gltf  map2.gltf  map3.gltf  map4.gltf  map5.gltf  map6.gltf  maze.glb
src/: main.rs  map_gen.rs  pooling.rs  resources.rs
src/game/: components.rs  map_gen.rs  mod.rs  pooling.rs  systems.rs
src/game/enemy/: components.rs  mod.rs  resources.rs  systems.rs
src/game/glimpse/: components.rs  mod.rs  systems.rs
src/game/map/: components.rs  mod.rs  resources.rs  systems.rs
src/game/player/: bundles.rs  components.rs  mod.rs  resources.rs  systems.rs
src/player/: components.rs  mod.rs  systems.rs
src/preload/: mod.rs
